feat: validaciones y configuraciones de testing