@@ -12,9 +12,8 @@ import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
 import java.math.BigDecimal;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
+import java.util.Optional;
 
 import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.Mockito.when;
@@ -28,81 +27,83 @@ class AlertServiceTest {
     @InjectMocks
     private AlertService alertService;
 
-    private Product productLowStock;
-    private Product productCriticalStock;
-    private Product productNormalStock;
+    private Product productOk;
+    private Product productLow;
+    private Product productCritical;
 
     @BeforeEach
     void setUp() {
-        productLowStock = new Product();
-        productLowStock.setId(1L);
-        productLowStock.setSku("ELEC-001");
-        productLowStock.setName("Laptop Dell XPS 15");
-        productLowStock.setCategory("Electrónica");
-        productLowStock.setCurrentStock(5);
-        productLowStock.setMinStock(10);
-        productLowStock.setUnitPrice(new BigDecimal("1299.99"));
+        productOk = new Product();
+        productOk.setId(1L);
+        productOk.setSku("ELEC-001");
+        productOk.setName("Laptop Dell XPS 15");
+        productOk.setCategory("Electrónica");
+        productOk.setCurrentStock(10);
+        productOk.setMinStock(5);
+        productOk.setUnitPrice(new BigDecimal("1299.99"));
 
-        productCriticalStock = new Product();
-        productCriticalStock.setId(2L);
-        productCriticalStock.setSku("ELEC-002");
-        productCriticalStock.setName("Mouse Logitech");
-        productCriticalStock.setCategory("Accesorios");
-        productCriticalStock.setCurrentStock(3);
-        productCriticalStock.setMinStock(10);
-        productCriticalStock.setUnitPrice(new BigDecimal("29.99"));
+        productLow = new Product();
+        productLow.setId(2L);
+        productLow.setSku("ELEC-002");
+        productLow.setName("Mouse Inalámbrico");
+        productLow.setCategory("Electrónica");
+        productLow.setCurrentStock(3);
+        productLow.setMinStock(5);
+        productLow.setUnitPrice(new BigDecimal("29.99"));
 
-        productNormalStock = new Product();
-        productNormalStock.setId(3L);
-        productNormalStock.setSku("ELEC-003");
-        productNormalStock.setName("Teclado Mecánico");
-        productNormalStock.setCategory("Electrónica");
-        productNormalStock.setCurrentStock(20);
-        productNormalStock.setMinStock(5);
-        productNormalStock.setUnitPrice(new BigDecimal("89.99"));
+        productCritical = new Product();
+        productCritical.setId(3L);
+        productCritical.setSku("ELEC-003");
+        productCritical.setName("Teclado Mecánico");
+        productCritical.setCategory("Electrónica");
+        productCritical.setCurrentStock(1);
+        productCritical.setMinStock(5);
+        productCritical.setUnitPrice(new BigDecimal("89.99"));
     }
 
     @Test
-    void getAlerts_WithLowStock_ReturnsLowSeverity() {
-        when(productRepository.findAll()).thenReturn(Arrays.asList(productLowStock));
+    void getAlerts_WithAlerts_ReturnsAlertList() {
+        when(productRepository.findAll()).thenReturn(List.of(productOk, productLow, productCritical));
 
-        List<StockAlertResponseDto> alerts = alertService.getAlerts();
+        List<StockAlertResponseDto> result = alertService.getAlerts();
 
-        assertEquals(1, alerts.size());
-        assertEquals(AlertSeverity.LOW, alerts.get(0).getSeverity());
-    }
-
-    @Test
-    void getAlerts_WithCriticalStock_ReturnsCriticalSeverity() {
-        when(productRepository.findAll()).thenReturn(Arrays.asList(productCriticalStock));
-
-        List<StockAlertResponseDto> alerts = alertService.getAlerts();
-
-        assertEquals(1, alerts.size());
-        assertEquals(AlertSeverity.CRITICAL, alerts.get(0).getSeverity());
+        assertNotNull(result);
+        assertEquals(2, result.size());
     }
 
     @Test
     void getAlerts_WithNoAlerts_ReturnsEmptyList() {
-        when(productRepository.findAll()).thenReturn(Arrays.asList(productNormalStock));
+        when(productRepository.findAll()).thenReturn(List.of(productOk));
 
-        List<StockAlertResponseDto> alerts = alertService.getAlerts();
+        List<StockAlertResponseDto> result = alertService.getAlerts();
 
-        assertTrue(alerts.isEmpty());
+        assertNotNull(result);
+        assertTrue(result.isEmpty());
     }
 
     @Test
-    void getAlerts_WithMultipleAlerts_ReturnsAllAlerts() {
-        when(productRepository.findAll()).thenReturn(Arrays.asList(productLowStock, productCriticalStock));
+    void getAlerts_WithLowStock_ReturnsLowSeverity() {
+        when(productRepository.findAll()).thenReturn(List.of(productLow));
 
-        List<StockAlertResponseDto> alerts = alertService.getAlerts();
+        List<StockAlertResponseDto> result = alertService.getAlerts();
 
-        assertEquals(2, alerts.size());
+        assertNotNull(result);
+        assertEquals(AlertSeverity.LOW, result.get(0).getSeverity());
     }
 
     @Test
-    void countCriticalAlerts_CorrectCount() {
-        when(productRepository.findAll()).thenReturn(Arrays.asList(productLowStock, productCriticalStock));
+    void getAlerts_WithCriticalStock_ReturnsCriticalSeverity() {
+        when(productRepository.findAll()).thenReturn(List.of(productCritical));
+
+        List<StockAlertResponseDto> result = alertService.getAlerts();
+
+        assertNotNull(result);
+        assertEquals(AlertSeverity.CRITICAL, result.get(0).getSeverity());
+    }
+
+    @Test
+    void countCriticalAlerts_WithCriticalAlerts_ReturnsCount() {
+        when(productRepository.findAll()).thenReturn(List.of(productOk, productLow, productCritical));
 
         long count = alertService.countCriticalAlerts();
 
@@ -110,11 +111,29 @@ class AlertServiceTest {
     }
 
     @Test
-    void countTotalAlerts_CorrectCount() {
-        when(productRepository.findAll()).thenReturn(Arrays.asList(productLowStock, productCriticalStock));
+    void countCriticalAlerts_WithNoCriticalAlerts_ReturnsZero() {
+        when(productRepository.findAll()).thenReturn(List.of(productOk));
+
+        long count = alertService.countCriticalAlerts();
+
+        assertEquals(0, count);
+    }
+
+    @Test
+    void countTotalAlerts_WithAlerts_ReturnsCount() {
+        when(productRepository.findAll()).thenReturn(List.of(productOk, productLow, productCritical));
 
         long count = alertService.countTotalAlerts();
 
         assertEquals(2, count);
+    }
+
+    @Test
+    void countTotalAlerts_WithNoAlerts_ReturnsZero() {
+        when(productRepository.findAll()).thenReturn(List.of(productOk));
+
+        long count = alertService.countTotalAlerts();
+
+        assertEquals(0, count);
     }
 }
